# Buchhaltung

./: Buchhaltung.pro  CMakeLists.txt  resources.qrc
app/: CMakeLists.txt  main.cpp
core/: Account.cpp  Account.h  CMakeLists.txt  Transfer.h  TransferShare.h  TransferShare.test.cpp
lib/: Account.cpp  Account.h  Account.test.cpp  AccountDialog.cpp  AccountDialog.h  AccountDialog.ui  AccountOverviewTableModel.cpp  AccountOverviewTableModel.h  Amount.cpp  Amount.h  Amount.test.cpp  CMakeLists.txt  InternalTransferDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  Model.test.cpp  PrintPreviewDialog.cpp  PrintPreviewDialog.h  PrintPreviewDialog.ui  Transfer.cpp  Transfer.h  TransferDialog.cpp  TransferDialog.h  TransferDialog.ui  TransferShare.cpp  TransferShare.h  TransferShare.test.cpp  TransferTableModel.cpp  TransferTableModel.h
scripts/: thirdparty.cmake
testdata/: test.json
widgets/: AccountDialog.cpp  AccountDialog.h  AccountDialog.ui  AccountOverviewTableModel.cpp  AccountOverviewTableModel.h  CMakeLists.txt  InternalTransferDialog.cpp  InternalTransferDialog.h  InternalTransferDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  Model.test.cpp  PrintPreviewDialog.h  PrintPreviewDialog.ui  TransferDialog.h  TransferDialog.ui  TransferTableModel.cpp  TransferTableModel.h
